--- a/_posts/Boat/2023-6-10-G1.md
+++ b/_posts/Boat/2023-6-10-G1.md
@@ -40,3 +40,33 @@ Rotation=0
 - 波特率选择115200，选择正确串口，依次点击读取，倒置保存
 
 post_img/set.png
+
+
+
+(function() {
+    'use strict';
+
+    // Your code here...
+    // 可适当调整按钮定位样式：right: 52px
+    var getCopyBtn = function(attrSelector) {
+        return `<button aria-label="复制代码块内容" title="复制代码块内容" class="btn btn-default btn-md gl-button btn-icon" style="position: absolute;margin-top: -5px;right: 52px;"
+            data-clipboard-target="[data-sourcepos='${attrSelector}']" data-testid="copyContentsButton" data-qa-selector="copy_contents_button" type="button">
+            <svg data-testid="copy-to-clipboard-icon" role="img" aria-hidden="true" class="gl-button-icon gl-icon s16">
+              <use href="/assets/icons-74e006cef5a76d001c81e4dda159833de67bd6dbd16e42db899bbe43f2a76cf2.svg#copy-to-clipboard"></use>
+            </svg>
+          </button>`
+    }
+
+    window.onload = function() {
+        setTimeout(function() {
+            document.querySelectorAll('div.blob-viewer pre[data-sourcepos]').forEach(function(o, i) {
+                var selector = o.attributes['data-sourcepos'].value,
+                    target = document.querySelector(`[data-sourcepos='${selector}']`),
+                    copyNode = new DOMParser().parseFromString(getCopyBtn(selector), 'text/html').body.childNodes[0];
+
+                target.insertBefore(copyNode, target.childNodes[0]);
+            });
+        }, 3e3)
+    }
+
+})();
