--- a/_posts/Boat/2023-6-10-G1.md
+++ b/_posts/Boat/2023-6-10-G1.md
@@ -14,7 +14,9 @@ description: "G1吊舱使用教程"
 ## 下电后在SD卡中写入配置文件
 
 - 配置文件地址
-- https://dl.amovlab.com:30443/public/%E8%BD%AF%E4%BB%B6%E4%B8%8B%E8%BD%BD/G1%E5%90%8A%E8%88%B1/%E5%90%8A%E8%88%B1%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6/
+<blockquote>
+  【2】<a href="https://dl.amovlab.com:30443/public/%E8%BD%AF%E4%BB%B6%E4%B8%8B%E8%BD%BD/G1%E5%90%8A%E8%88%B1/%E5%90%8A%E8%88%B1%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6/" target="_blank">下载地址</a>
+</blockquote>
 
 ## 配置文件中修改画面设置
 
