--- a/_posts/Boat/2023-6-10-G1.md
+++ b/_posts/Boat/2023-6-10-G1.md
@@ -18,7 +18,7 @@ description: "G1吊舱使用教程"
 <a href="https://dl.amovlab.com:30443/public/%E8%BD%AF%E4%BB%B6%E4%B8%8B%E8%BD%BD/G1%E5%90%8A%E8%88%B1/%E5%90%8A%E8%88%B1%E9%85%8D%E7%BD%AE%E6%96%87%E4%BB%B6/" target="_blank">下载地址</a>
 </blockquote>
 
-##【2】配置文件中修改画面设置
+## 【2】配置文件中修改画面设置
 
 ```cpp
 Syntax highlighted code block
@@ -39,4 +39,6 @@ Rotation=0
 
 - 波特率选择115200，选择正确串口，依次点击读取，倒置保存
 
--![1](post_img/set.png "操作示例")
+- 重新上电
+
+![1](/post_img/set.png "配置界面")
